# KDE-hourlyfoxes

./: CMakeLists.txt  KDEhourlyfoxes.kdev4  Messages.sh  README.md  python_wireframe.py
.kdev4/: KDEhourlyfoxes.kdev4
package/: metadata.desktop
package/contents/ui/: config.qml  main.qml
plugin/: CMakeLists.txt  kdehourlyfoxesplugin.cpp  kdehourlyfoxesplugin.h  qmldir
